# ws.io-rs

./: .gitattributes  .gitignore  .release-plz.toml  Cargo.toml  README.md  fetch-and-merge.sh  modify-files-permissions.sh  rust-toolchain.toml  rustfmt.toml  upgrade-dependencies.sh
.cargo/: config.toml
.github/workflows/: continuous-verification.yaml  release-test-codecov.yaml
crates/: Cargo.example.toml
crates/wsio-adapter/: CHANGELOG.md  Cargo.toml  README.md
crates/wsio-adapter/src/: lib.rs
crates/wsio-client/: CHANGELOG.md  Cargo.toml
crates/wsio-client/src/: builder.rs  config.rs  lib.rs  runtime.rs  session.rs
crates/wsio-client/tests/: mod.rs
crates/wsio-core/: CHANGELOG.md  Cargo.toml
crates/wsio-core/benches/: event_registry.rs  packet_codecs.rs
crates/wsio-core/src/: lib.rs
crates/wsio-core/src/atomic/: enum.rs
crates/wsio-core/src/event/: registry.rs
crates/wsio-core/src/packet/: mod.rs
crates/wsio-core/src/packet/codecs/: bincode.rs  cbor.rs  mod.rs  msgpack.rs  postcard.rs  serde_json.rs  sonic_rs.rs
crates/wsio-core/src/traits/task/: spawner.rs
crates/wsio-core/src/types/: mod.rs
crates/wsio-core/src/utils/: task.rs
crates/wsio-server/: CHANGELOG.md  Cargo.toml
crates/wsio-server/benches/: server_realtime.rs
crates/wsio-server/src/: builder.rs  config.rs  lib.rs  request.rs  runtime.rs
crates/wsio-server/src/connection/: extensions.rs  mod.rs
crates/wsio-server/src/namespace/: builder.rs  config.rs  mod.rs
crates/wsio-server/src/namespace/operators/: broadcast.rs
crates/wsio-server/src/request_adapters/: mod.rs
crates/wsio-server/src/request_adapters/tower/: layer.rs  mod.rs  service.rs
crates/wsio-server/tests/: mod.rs
crates/wsio-server/tests/e2e/: broadcast.rs  mod.rs  ping_pong.rs  reconnect.rs
examples/: Cargo.toml
examples/client/: Cargo.toml  client.rs  connection_stress.rs
examples/server/: server.rs
scripts/libs/: common.ps1  common.sh
scripts/libs/public/: README.md  command.sh  common.sh  file.sh  log.sh  path.sh  platform.sh  prompt.sh  rust.sh
