[workspace]
members = [
  "crates/*",
]

resolver = "3"

[workspace.package]
edition = "2024"
# homepage = ""
license = "MIT"
repository = ""

categories = []
keywords = []

# Optional cargo/tool metadata.
# [package.metadata]


# =============================================================================
# Lints
# =============================================================================

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cargo = { level = "warn", priority = -1 }
cast_ptr_alignment = "warn"
dbg_macro = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
items_after_statements = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
mutex_atomic = "warn"
needless_for_each = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
todo = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_mut_passed = "deny"
unnecessary_sort_by = "deny"
unreadable_literal = "warn"
unused_async = "deny"
unused_self = "warn"
unwrap_used = "deny"

# Usually too noisy for many crates; enable when you want stricter docs.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"

# Commonly triggered by dependency trees; usually not actionable per crate.
multiple_crate_versions = "allow"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "allow"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
private_intra_doc_links = "warn"

# =============================================================================
# Dependencies
# =============================================================================

[workspace.dependencies]


# =============================================================================
# Profiles
# =============================================================================
# Prefer defining profiles at the workspace root.
# Profiles in dependency crates are ignored by Cargo.

# [profile.dev]
# opt-level = 0
# debug = true
# incremental = true
# overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

# Faster release build, slightly less optimized than full LTO.
# [profile.release-fast]
# inherits = "release"
# lto = "thin"
# codegen-units = 16

# Smaller binary profile.
# [profile.release-small]
# inherits = "release"
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"

# [profile.test]
# opt-level = 0
# debug = true

# [profile.bench]
# inherits = "release"
# debug = true

# =============================================================================
# Dependency overrides
# =============================================================================

# [patch.crates-io]
# crate-name = { git = "https://github.com/owner/crate-name", branch = "main" }
