[workspace]
members = ["client", "server"]
resolver = "3"

[workspace.package]
edition = "2024"

# Dependencies
[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
kikiutils = { version = "0.7.2", features = ["signal", "task", "tracing"] }
tikv-jemallocator = { version = "0.6.1", features = ["background_threads_runtime_support", "background_threads"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.43"
wsio-client = { path = "../crates/wsio-client", features = ["full"] }
wsio-server = { path = "../crates/wsio-server", features = ["full"] }

# Profiles
[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
panic = "unwind"
strip = "symbols"
