[package]
name = "wsio-client"
version = "0.7.12"

authors.workspace = true
categories.workspace = true
description = "Lightweight async WebSocket client for ws.io — provides event-based real-time messaging with a Socket.IO-inspired API."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Dependencies
[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
kikiutils = { version = "0.7.2", features = ["atomic-enum-cell"] }
num_enum = "0.7.5"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.17"
tracing = { version = "0.1.41", optional = true }
url = "2.5.7"
wsio-core = { path = "../wsio-core", version = "0.11.0" }

# Features
[features]
## Define features
packet-codec-bincode = ["wsio-core/packet-codec-bincode"]
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-postcard = ["wsio-core/packet-codec-postcard"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]
tls-native = ["tokio-tungstenite/native-tls"]
tls-rustls-native = ["tokio-tungstenite/rustls-tls-native-roots"]
tls-rustls-webpki = ["tokio-tungstenite/rustls-tls-webpki-roots"]
tracing = ["dep:tracing"]

## Default and alias
default = []
all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-postcard",
  "packet-codec-sonic-rs",
  "tls-rustls-webpki",
]

full = ["all"]
