[package]
name = "wsio-core"
version = "0.11.0"

authors.workspace = true
categories.workspace = true
description = "Shared core library for ws.io — provides common types, traits, and abstractions for WebSocket-based communication."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Dependencies
[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
ciborium = { version = "0.2.2", optional = true }
kikiutils = { version = "0.7.2", features = ["fx-collections"] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_repr = "0.1.20"
sonic-rs = { version = "0.5.6", optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
tokio-util = "0.7.17"
tungstenite = { version = "0.28.0", default-features = false }

# Features
[features]
## Define features
packet-codec-bincode = ["dep:bincode"]
packet-codec-cbor = ["dep:ciborium"]
packet-codec-msgpack = ["dep:rmp-serde"]
packet-codec-postcard = ["dep:postcard"]
packet-codec-sonic-rs = ["dep:sonic-rs"]

## Default and alias
default = []
all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-postcard",
  "packet-codec-sonic-rs",
]

full = ["all"]
