[package]
name = "wsio-core"
version = "0.12.9"
edition.workspace = true

description = "Shared packet, event, and task primitives for ws.io."
# documentation = "https://docs.rs/crate-name"
# homepage.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

categories.workspace = true
keywords.workspace = true

include = [
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**",
  "examples/**",
  "src/**",
  "tests/**",
]

# Prevent accidental publishing for private/internal crates.
# publish = false

# Only needed when using native linking / sys crates.
# links = "native-library-name"

# Cargo auto-detects build.rs by default.
# Use `build = false` to disable auto-detection, or a custom path if needed.
# build = "build.rs"

# Optional cargo/tool metadata.
# [package.metadata]


# =============================================================================
# Lints
# =============================================================================

[lints]
workspace = true

# =============================================================================
# Features
# =============================================================================

[features]
default = []

# Convenience aliases.
all = [
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-postcard",
  "packet-codec-sonic-rs",
]

full = ["all"]

# Example:
# serde = ["dep:serde"]
# cli = ["dep:clap"]
# async = ["dep:tokio"]

# Define features here.
packet-codec-cbor = ["dep:ciborium"]
packet-codec-msgpack = ["dep:rmp-serde"]
packet-codec-postcard = ["dep:postcard"]
packet-codec-sonic-rs = ["dep:sonic-rs"]

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
anyhow = "1.0.102"
ciborium = { version = "0.2.2", optional = true }
kikiutils = { version = "0.11.2", features = ["fx-collections"] }
parking_lot = "0.12.5"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }
rmp-serde = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
sonic-rs = { version = "0.5.8", optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"] }
tokio-util = "0.7.18"
tungstenite = { version = "0.29.0", default-features = false }

# -----------------------------------------------------------------------------
# OS / family-specific dependencies
# -----------------------------------------------------------------------------

# Applies to Linux, macOS, BSD, Android, iOS, etc.
[target.'cfg(unix)'.dependencies]


[target.'cfg(windows)'.dependencies]


# Linux-only deps.
[target.'cfg(target_os = "linux")'.dependencies]


# macOS-only deps.
[target.'cfg(target_os = "macos")'.dependencies]


# Windows-only deps. Usually same as cfg(windows), but kept explicit for template clarity.
[target.'cfg(target_os = "windows")'.dependencies]


[target.'cfg(target_family = "wasm")'.dependencies]


[target.'cfg(target_arch = "wasm32")'.dependencies]

# -----------------------------------------------------------------------------
# Target cfg / ABI-specific dependencies
# -----------------------------------------------------------------------------

# Linux GNU / glibc only.
[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]


# Linux musl only.
[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]


# Windows MSVC only.
[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]


# Windows GNU only.
[target.'cfg(all(target_os = "windows", target_env = "gnu"))'.dependencies]


# macOS Intel only.
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]


# macOS Apple Silicon only.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.dependencies]
# [target.'aarch64-apple-ios'.dependencies]
# [target.'aarch64-linux-android'.dependencies]
# [target.'wasm32-unknown-unknown'.dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.dependencies]

# =============================================================================
# Build dependencies
# =============================================================================

# Build-script-only dependencies.
[build-dependencies]


# -----------------------------------------------------------------------------
# Target-specific build dependencies
# -----------------------------------------------------------------------------

# Unix build-script deps.
[target.'cfg(unix)'.build-dependencies]


# Windows build-script deps.
[target.'cfg(windows)'.build-dependencies]


# Linux build-script deps.
[target.'cfg(target_os = "linux")'.build-dependencies]


# macOS build-script deps.
[target.'cfg(target_os = "macos")'.build-dependencies]


# Windows build-script deps.
[target.'cfg(target_os = "windows")'.build-dependencies]


# WASM build-script deps.
[target.'cfg(target_family = "wasm")'.build-dependencies]


# wasm32 build-script deps.
[target.'cfg(target_arch = "wasm32")'.build-dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.build-dependencies]
# [target.'aarch64-apple-ios'.build-dependencies]
# [target.'aarch64-linux-android'.build-dependencies]
# [target.'wasm32-unknown-unknown'.build-dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.build-dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.build-dependencies]

# =============================================================================
# Development dependencies
# =============================================================================

# Test/example/bench-only dependencies.
[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

# -----------------------------------------------------------------------------
# Target-specific development dependencies
# -----------------------------------------------------------------------------

# Unix-only test deps.
[target.'cfg(unix)'.dev-dependencies]


# Windows-only test deps.
[target.'cfg(windows)'.dev-dependencies]


# Linux-only test deps.
[target.'cfg(target_os = "linux")'.dev-dependencies]


# macOS-only test deps.
[target.'cfg(target_os = "macos")'.dev-dependencies]


# Windows-only test deps.
[target.'cfg(target_os = "windows")'.dev-dependencies]


# WASM-only test deps.
[target.'cfg(target_family = "wasm")'.dev-dependencies]


# wasm32-only test deps.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]


# Custom sections for exact target triples or custom target cfgs.
# Examples:
# [target.'aarch64-unknown-linux-musl'.dev-dependencies]
# [target.'aarch64-apple-ios'.dev-dependencies]
# [target.'aarch64-linux-android'.dev-dependencies]
# [target.'wasm32-unknown-unknown'.dev-dependencies]
# [target.'cfg(all(target_os = "linux", target_env = "musl"))'.dev-dependencies]
# [target.'cfg(all(target_vendor = "apple", target_arch = "aarch64"))'.dev-dependencies]

# =============================================================================
# Library / binary / examples / tests / benches
# =============================================================================

# Usually not needed if using the default `src/lib.rs`.
# [lib]
# name = "crate_name"
# path = "src/lib.rs"
# crate-type = ["lib"]
# doctest = true

# Usually not needed if using the default `src/main.rs`.
# [[bin]]
# name = "crate-name"
# path = "src/main.rs"
# required-features = []

# [[example]]
# name = "example-name"
# path = "examples/example-name.rs"
# required-features = []

# Usually auto-discovered from `tests/*.rs`.
# [[test]]
# name = "integration"
# path = "tests/integration.rs"
# required-features = []

[[bench]]
name = "event_registry"
path = "benches/event_registry.rs"
harness = false
required-features = []

[[bench]]
name = "packet_codecs"
path = "benches/packet_codecs.rs"
harness = false
required-features = []
