[package]
name = "wsio-server"
version = "0.12.2"

authors.workspace = true
categories.workspace = true
description = "Async WebSocket server framework for ws.io — provides event-based real-time messaging, namespaces, and room-like broadcasting."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Dependencies
[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
futures-util = { version = "0.3.32", default-features = false }
http = "1.4.0"
http-body = "1.0.1"
hyper = "1.9.0"
hyper-util = { version = "0.1.19", features = ["tokio"] }
kikiutils = { version = "0.7.2", features = ["atomic-enum-cell", "fx-collections"] }
num_enum = "0.7.6"
parking_lot = "0.12.5"
roaring = "0.11.4"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
tokio-util = "0.7.18"
tower-layer = { version = "0.3.3", optional = true }
tower-service = { version = "0.3.3", optional = true }
url = "2.5.8"
wsio-core = { path = "../wsio-core", version = "0.12.5" }

[dev-dependencies]
axum = { version = "0.8.9", features = ["ws"] }
wsio-client = { path = "../wsio-client", features = ["full"] }
wsio-server = { path = "./", features = ["full"] }

# Features
[features]
## Define features
connection-extensions = []
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-postcard = ["wsio-core/packet-codec-postcard"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]
tower = [
  "dep:tower-layer",
  "dep:tower-service",
]

## Default and alias
default = []
all = [
  "connection-extensions",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-postcard",
  "packet-codec-sonic-rs",
  "tower",
]

full = ["all"]
